# MNW_Raffinage

./: .dockerignore  .gitignore  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  spec_projet_raffinage_dl.md  stop.sh  train_all.py
backend/: Dockerfile  requirements.txt
backend/app/: deps.py  main.py  schemas.py
backend/models_artifacts/: energy_optimization_summary.json  fouling_conv_ae.pt  fouling_dense_ae.pt  fouling_gru_residual.pt  fouling_lstm_ae.pt  fouling_production_model.json  fouling_scaler_X.joblib  fouling_thresholds.json  fouling_vae.pt  quality_production_model.json  quality_scaler_X.joblib  quality_scaler_y.joblib  quality_soft_sensor.pt  surrogate_energy.pt  surrogate_feature_names.joblib  surrogate_scaler_X.joblib  yields_best.pt  yields_best_model.json  yields_bilstm.pt  yields_cnn1d.pt  yields_gru.pt  yields_lstm.pt  yields_mlp.pt  yields_tcn.pt  yields_transformer.pt
data/processed/: yields_feature_names.joblib  yields_scaler_X.joblib
data/raw/: cdu_data.csv  cracker_data.csv  energy_data.csv  (+1 more)
frontend/: Dockerfile  package-lock.json  package.json
notebooks/: 01_eda_refining.ipynb  02_preprocessing.ipynb  03_yield_prediction.ipynb  04_fouling_detection.ipynb  05_energy_optimization.ipynb  06_realtime_system.ipynb
report/: presentation.html  presentation.md  report.md  report.tex
src/: alert_system.py  config_loader.py  data_generator.py  energy_optimizer.py  fouling_detector.py  model_registry.py  plotting.py  preprocessing.py  realtime_monitor.py  seed_utils.py  training.py  yield_model.py
(+47 files in other folders)
